# amrn-escalabirras-dual

./: .env.example  .gitignore  AGENTS.md  PRODUCTION.md  README.md  angular.json  compose.override.example.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  prettier.config.js  setup-sdd.sh
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_participants.py  0002_add_embed_tokens.py  0003_add_event.py
backend/app/: __init__.py  auth.py  config.py  crud.py  database.py  deps.py  errors.py  main.py  models.py  schemas.py  security.py
backend/app/middleware/: frame_ancestors.py  security_headers.py
backend/app/routers/: auth.py  event.py  leaderboard.py  participants.py  tokens.py
backend/app/services/: __init__.py  records.py
backend/tests/: conftest.py  test_auth.py  test_crates.py  test_embed_tokens.py  test_event.py  test_frame_ancestors.py  test_health.py  test_history.py  test_leaderboard.py  test_participants.py  test_protected_endpoints.py  test_security_headers.py
frontend/: Dockerfile  angular.json  nginx.conf  tsconfig.json
frontend/src/: index.html
k8s/: escalabirras-api-configmap.yaml  escalabirras-api-secret.yaml
specs/: manifest.yml
src/: index.html  styles.css
src/app/: app-routing.module.ts  app.component.html  (+2 more)
(+93 files in other folders)
