[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escalabirras-backend"
version = "0.1.0"
description = "FastAPI backend for the escalabirras tournament app"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.32.0",
    "sqlalchemy~=2.0.36",
    "alembic~=1.13.0",
    "psycopg[binary]~=3.2.0",
    "pydantic~=2.10.0",
    "pydantic-settings~=2.7.0",
    "pyjwt~=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.24.0",
    "httpx~=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]